--- a/index.html
+++ b/index.html
@@ -1,79 +1,62 @@
 <!doctype html>
-}
+<html lang="en">
+<head>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>MyAgent</title>
 
 
-// Redirect to canonical domain when launched as standalone - only if TARGET_DOMAIN set
-function ensureCanonicalOnStandalone() {
-if (!isInStandaloneMode()) return;
-if (!TARGET_DOMAIN) return; // no redirect during testing
-try {
-const current = window.location.href;
-const target = TARGET_DOMAIN.replace(/\/$/, '') + '/';
-if (!current.startsWith(target)) {
-window.location.replace(target);
-}
-} catch (e) {
-console.warn('canonical redirect failed', e);
-}
-}
+<!-- PWA manifest - using GH Pages base -->
+<link rel="manifest" href="/agent-pwa/manifest.json" />
 
 
-(function branchByPlatform() {
-// If already running as an installed app, show app shell and optionally redirect
-if (isInStandaloneMode()) {
-ensureCanonicalOnStandalone();
-document.getElementById('ios-install')?.classList.add('hidden');
-document.getElementById('android-redirect')?.classList.add('hidden');
-document.getElementById('desktop')?.classList.add('hidden');
-document.getElementById('fallback')?.classList.add('hidden');
-document.getElementById('app-shell')?.classList.remove('hidden');
-return;
-}
+<!-- Theme color -->
+<meta name="theme-color" content="#0b6efd" />
 
 
-// Not installed yet
-if (isiOS()) {
-document.getElementById('ios-install')?.classList.remove('hidden');
-return;
-}
+<!-- Apple meta for iOS -->
+<meta name="apple-mobile-web-app-capable" content="yes" />
+<meta name="apple-mobile-web-app-title" content="MyAgent" />
+<meta name="apple-mobile-web-app-status-bar-style" content="default" />
+<link rel="apple-touch-icon" href="/agent-pwa/icons/apple-touch-icon.png" />
 
 
-if (isAndroid()) {
-const androidDiv = document.getElementById('android-redirect');
-androidDiv?.classList.remove('hidden');
-const link = document.getElementById('play-store-link');
-link.href = "https://play.google.com/store/apps/details?id=com.myagent.app"; // update package id
-setTimeout(() => { window.location.href = link.href; }, 300);
-return;
-}
+<style>
+body { font-family: Inter, system-ui, -apple-system, "Segoe UI", Roboto, sans-serif; margin:0; padding:24px; display:flex; align-items:center; justify-content:center; min-height:100vh; background:#f6f7fb; color:#111 }
+.card { max-width:720px; width:100%; background:white; padding:28px; border-radius:12px; box-shadow:0 6px 20px rgba(0,0,0,0.08) }
+.hidden { display:none }
+.btn { display:inline-block; padding:10px 14px; border-radius:8px; text-decoration:none; background:#0b6efd; color:white }
+img.qr { width:160px; height:160px; margin-top:12px }
+.steps { margin-top:12px; line-height:1.5 }
+.muted { color:#555; font-size:0.95rem }
+</style>
+</head>
+<body>
+<div class="card" id="main-card">
 
 
-if (!isMobile()) {
-const desktop = document.getElementById('desktop');
-desktop?.classList.remove('hidden');
-const qr = document.getElementById('qr-img');
-const siteUrl = TARGET_DOMAIN || (window.location.origin + GH_PAGES_BASE);
-qr.src = "https://api.qrserver.com/v1/create-qr-code/?size=200x200&data=" + encodeURIComponent(siteUrl);
-qr.onclick = () => window.open(siteUrl, "_blank");
-return;
-}
+<!-- App shell placeholder - replace with your app's root element or app script -->
+<div id="app-shell" class="hidden">
+<h1>MyAgent</h1>
+<p class="muted">App running as installed PWA or normal web app. Replace this with your Flutter web mount element or app shell.</p>
+</div>
 
 
-document.getElementById('fallback')?.classList.remove('hidden');
-})();
+<!-- iOS instructions -->
+<div id="ios-install" class="hidden">
+<h2>Install MyAgent on your iPhone</h2>
+<p class="steps">
+1. Tap the Share button in Safari - the square with an arrow up.<br />
+2. Select Add to Home Screen.<br />
+3. Tap Add. MyAgent will appear on your home screen like a native app.
+</p>
+<p>Note: If you already added it, open it from your home screen.</p>
+</div>
 
 
-// Register service worker if available
-if ('serviceWorker' in navigator) {
-window.addEventListener('load', () => {
-const swPath = (typeof GH_PAGES_BASE === 'string' && GH_PAGES_BASE && !TARGET_DOMAIN)
-? GH_PAGES_BASE + 'sw.js'
-: '/sw.js';
-navigator.serviceWorker.register(swPath).catch(err => {
-console.warn('SW register failed', err);
-});
-});
-}
-</script>
-</body>
+<!-- Android redirect fallback -->
+<div id="android-redirect" class="hidden">
+<h2>Opening Play Store</h2>
+<p>If you are not redirected, <a id="play-store-link" class="btn" href="#">Open Play Store</a></p>
+</div>
 </html>
